// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BehaviorInput AssetItem should render 1`] = `
<div>
  <div
    class="asset-display-root"
    title=""
  >
    <div
      class="asset-name text-truncate"
    />
  </div>
</div>
`;

exports[`BehaviorInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      aria-hidden="true"
      class="form-group form-group-autofit"
      data-aria-hidden="true"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div>
        test
      </div>
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        <b />
      </div>
      <div
        class="form-group-item"
      >
        <div
          class="input-group select-entity-group"
        >
          <div
            class="input-group-item"
          >
            <div
              class="input-group select-input-root"
            >
              <div
                class="input-group-item"
              >
                <input
                  class="input-root form-control"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="selected-item-container"
              >
                <div
                  class="asset-display-root"
                  title=""
                >
                  <div
                    class="asset-name text-truncate"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="input-group-item input-group-item-shrink input-group-append"
          >
            <button
              class="btn btn-secondary"
              type="button"
            >
              Select
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-group form-group-autofit"
    >
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      >
        <button
          aria-activedescendant="ge"
          aria-controls="clay-id-2"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-2"
          class="form-control form-control-select form-control-select-secondary operator-input show"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          at least
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      >
        <input
          class="input-root form-control number-input"
          data-testid="occurence-count-input"
          min="0"
          type="number"
          value=""
        />
      </div>
      <div
        aria-hidden="true"
        class="form-group-item unit form-group-item-label form-group-item-shrink"
        data-aria-hidden="true"
      >
        time(s)
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      >
        <button
          aria-activedescendant="ever"
          aria-controls="clay-id-4"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="clay-id-4"
          class="form-control form-control-select form-control-select-secondary conjunction-input show"
          data-testid="conjunction-input"
          role="combobox"
          style=""
          tabindex="0"
          type="button"
        >
          ever
        </button>
      </div>
      <div
        aria-hidden="true"
        class="form-group-item form-group-item-shrink"
        data-aria-hidden="true"
      />
    </div>
  </div>
</div>
`;

exports[`BehaviorInput should render w/ data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div>
        test
      </div>
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        <b />
      </div>
      <div
        class="form-group-item"
      >
        <div
          class="input-group select-entity-group"
        >
          <div
            class="input-group-item"
          >
            <div
              class="input-group select-input-root"
            >
              <div
                class="input-group-item"
              >
                <input
                  class="input-root form-control"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="selected-item-container"
              >
                <div
                  class="asset-display-root"
                  title=""
                >
                  <div
                    class="asset-name text-truncate"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="input-group-item input-group-item-shrink input-group-append"
          >
            <button
              class="btn btn-secondary"
              type="button"
            >
              Select
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          class="form-control form-control-select form-control-select-secondary operator-input"
          role="combobox"
          tabindex="0"
          type="button"
        >
          at least
        </button>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          class="input-root form-control number-input"
          data-testid="occurence-count-input"
          min="0"
          type="number"
          value="123"
        />
      </div>
      <div
        class="form-group-item unit form-group-item-label form-group-item-shrink"
      >
        time(s)
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <button
          aria-activedescendant=""
          aria-expanded="false"
          aria-haspopup="listbox"
          class="form-control form-control-select form-control-select-secondary conjunction-input"
          data-testid="conjunction-input"
          role="combobox"
          tabindex="0"
          type="button"
        >
          ever
        </button>
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      />
    </div>
  </div>
</div>
`;
